# LacreiSaude

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-back.yml
src/: Dockerfile  pyproject.toml  requirements.txt
src/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_profissional.py  0003_consulta.py  0004_delete_usuario.py  0005_alter_consulta_data.py
src/api/tests/: test_consultas.py  test_profissionais.py
src/core/: settings.py  urls.py
